# django-clickhouse-backend

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  PROJECT_INDEX.MD  README.md  README_cn.md  compose.yaml  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: base-test.yml  pre-commit.yml  release.yml  test-before-pr.yml  test-main.yml  test.yml
clickhouse-config/node1/: enable-keeper.xml  macros.xml  network-and-logging.xml
clickhouse-config/node2/: enable-keeper.xml  macros.xml  remote-servers.xml
clickhouse-config/node3/: enable-keeper.xml  macros.xml  use-keeper.xml
clickhouse-config/node4/: macros.xml  network-and-logging.xml
clickhouse_backend/: __init__.py  compat.py  utils.py  validators.py
clickhouse_backend/backend/: base.py  client.py  creation.py  features.py  introspection.py  operations.py  schema.py
clickhouse_backend/driver/: __init__.py  client.py  connection.py  escape.py  pool.py  types.py
clickhouse_backend/idworker/: __init__.py  snowflake.py
clickhouse_backend/models/: __init__.py  aggregates.py  base.py  count.py  engines.py  fields.py  functions.py  indexes.py  query.py
clickhouse_backend/patch/: __init__.py  cluster.py  functions.py  migrations.py  recorder.py
clickhouse_backend/utils/: version.py
docs/: Configurations.md  Fields.md  Migrations.md  README.md
example/: README.md
example/config/: settings.py  urls.py
example/testapp/: apps.py  models.py  tests.py
proxy-config/: haproxy.cfg
tests/: dbrouters.py  runtests.py  settings.py
tests/aggregates/: models.py  tests.py
tests/aggregation/: models.py  test_filter_argument.py  tests.py
tests/aggregation_regress/: models.py  tests.py
tests/annotations/: models.py  tests.py
tests/auth_tests/: test_auth_backends.py  test_basic.py  test_middleware.py  test_models.py
tests/backends/: models.py  test_ddl_references.py  test_table_engine.py  test_utils.py  tests.py
tests/basic/: models.py  tests.py
tests/ch_fields/: models.py  test_arrayfield.py  test_jsonfield.py  test_mapfield.py  test_tuplefield.py  tests.py
tests/clickhouse_fields/: models.py  test_jsonfield.py  test_tuplefield.py  tests.py
tests/clickhouse_functions/: models.py  test_arrays.py  test_datetime.py  test_hashes.py  test_other.py  test_random.py  test_tuples.py
tests/clickhouse_queries/: models.py  tests.py
tests/clickhouse_table_engine/: models.py  test_base.py  test_distributed.py  tests.py
tests/count/: models.py  tests.py
tests/expressions_window/: models.py  tests.py
tests/field_defaults/: models.py  tests.py
tests/inspectdb/: models.py  tests.py
tests/migration_test_data_persistence/: models.py  tests.py
tests/migrations/: test_autodetector.py  test_base.py  test_commands.py  test_deprecated_fields.py  test_executor.py  test_loader.py  test_multidb.py  test_operations.py  (+3 more)
(+88 files in other folders)
