[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-clickhouse-backend"
authors = [
    {name = "Lin Zhiwen", email = "zhiwenlin1116@gmail.com"},
]
description = "Django clickHouse database backend"
urls = {Homepage = "https://github.com/jayvynl/django-clickhouse-backend"}
requires-python = ">=3.7, <4"
keywords = ["Django", "ClickHouse", "database", "backend", "engine", "driver"]
license = {text = "MIT"}
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "django>=3.2",
    "clickhouse-driver==0.2.6",
    "clickhouse-pool==0.5.3",
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "clickhouse_backend.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.isort]
profile = "black"
