[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-clickhousedb"
authors = [
    { name = "GTO Wizard", email = "dev@gtowizard.com" },
]
description = "Django clickHouse database backend"
urls = {Homepage = "https://github.com/gto-wizard/django-clickhousedb"}
requires-python = ">=3.10, <4"
keywords = ["Django", "ClickHouse", "database", "backend", "engine", "driver"]
license = {text = "MIT"}
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "django>=5.0",
    "clickhouse-driver==0.2.10",
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "clickhouse_backend.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.ruff]
line-length = 88
